Bug fixed . 修复了某冰遗留下的奇♂怪bug